# galil

./: .gitignore  README.md  pyproject.toml
src/galil/: galil.py
